# eep-bridge-host

./: .gitignore  Cargo.toml  README.md  protogen.sh  pubspec.yaml
.github/workflows/: ci.yml
assets/utility/: EEP Bridge Host.lnk
lib/: main.dart
lib/components/: animated_multi_switcher.dart  auto_unfocus.dart  control_button.dart  create_project_dialog.dart  event_listening_widget.dart  multi_animated_cross_fade.dart  sidebar.dart  slim_icon_button.dart
lib/components/dialogs/: base_dialog.dart  create_project_dialog.dart  unimplemented_dialog.dart
lib/icons/: eep_bridge_icons.dart
lib/logging/: logger.dart
lib/network/: bridge_client.dart  bridge_server.dart  exception.dart  packet_decoder.dart  packet_encoder.dart
lib/network/event/: server_events.dart
lib/network/protocol/: definitions.pb.dart  definitions.pbenum.dart  definitions.pbjson.dart  definitions.pbserver.dart  (+4 more)
lib/project/: connection.dart  controller.dart  layout.dart  meta.dart  project.dart
lib/util/: application_theme.dart  change_notifier.dart  extended_math.dart  io.dart  iteratable_extension.dart  reference.dart  simple_vector.dart  ui_messenger.dart
lib/views/: main_menu.dart  main_view.dart  project_view.dart  view_base.dart  viewport_wrapper.dart  waiting_view.dart
linux/: CMakeLists.txt  my_application.cc
proto/: definitions.proto  packets.proto
proto/network/: packets.proto
proto/project/: layout.proto  project.proto
src/: main.rs
tools/: pub
windows/: CMakeLists.txt
windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  win32_window.cpp
(+24 files in other folders)
